[gd_scene load_steps=6 format=3 uid="uid://bd2ehu2mq5p2p"]

[ext_resource type="Script" path="res://scripts/item_slot.gd" id="1_pva7c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r875y"]
corner_detail = 2

[sub_resource type="Theme" id="Theme_ck4m1"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_r875y")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pjlvf"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.162, 0.162, 0.162, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 2

[sub_resource type="LabelSettings" id="LabelSettings_mpymp"]
font_size = 20

[node name="ItemSlot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_ck4m1")
theme_override_styles/panel = SubResource("StyleBoxFlat_pjlvf")
script = ExtResource("1_pva7c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 4

[node name="Price" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
label_settings = SubResource("LabelSettings_mpymp")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
